{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 32,
  "lineage": "715bebe1-7359-9ab0-b23e-fb15cf679475",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:185188589256:instance/i-09e9624e72a363a12",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e9624e72a363a12",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0664e5e46c1b0c994"
              }
            ],
            "primary_network_interface_id": "eni-0664e5e46c1b0c994",
            "private_dns": "ip-10-0-1-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-100-59-17-43.compute-1.amazonaws.com",
            "public_ip": "100.59.17.43",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08fef52522851a477",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7ae90d44a166482",
            "tags": {
              "Name": "devops-platform-web-instance"
            },
            "tags_all": {
              "Name": "devops-platform-web-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08052988421ce10ce"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "i-09e9624e72a363a12",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185188589256:security-group/sg-08052988421ce10ce",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08052988421ce10ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-platform-web-sg",
            "name_prefix": "",
            "owner_id": "185188589256",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-platform-web-sg"
            },
            "tags_all": {
              "Name": "devops-platform-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f0b5d35a67f9b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "sg-08052988421ce10ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185188589256:internet-gateway/igw-012dd4cc8068038b4",
            "id": "igw-012dd4cc8068038b4",
            "owner_id": "185188589256",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-platform-igw"
            },
            "tags_all": {
              "Name": "devops-platform-igw"
            },
            "vpc_id": "vpc-014f0b5d35a67f9b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "igw-012dd4cc8068038b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185188589256:route-table/rtb-066ae1391bdf722d7",
            "id": "rtb-066ae1391bdf722d7",
            "owner_id": "185188589256",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012dd4cc8068038b4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-platform-public-rt"
            },
            "tags_all": {
              "Name": "devops-platform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f0b5d35a67f9b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "rtb-066ae1391bdf722d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54f888195ea39e3",
            "region": "us-east-1",
            "route_table_id": "rtb-066ae1391bdf722d7",
            "subnet_id": "subnet-0b7ae90d44a166482"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "rtbassoc-0f54f888195ea39e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185188589256:subnet/subnet-0b7ae90d44a166482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7ae90d44a166482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185188589256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-platform-public-subnet"
            },
            "tags_all": {
              "Name": "devops-platform-public-subnet"
            },
            "vpc_id": "vpc-014f0b5d35a67f9b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "subnet-0b7ae90d44a166482",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185188589256:vpc/vpc-014f0b5d35a67f9b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c217a80bf5da3ff6",
            "default_route_table_id": "rtb-04d882da3f0106a48",
            "default_security_group_id": "sg-0aae6c08f224427e3",
            "dhcp_options_id": "dopt-037cdeec4e2badb45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014f0b5d35a67f9b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d882da3f0106a48",
            "owner_id": "185188589256",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-platform-vpc"
            },
            "tags_all": {
              "Name": "devops-platform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "185188589256",
            "id": "vpc-014f0b5d35a67f9b7",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}